# chartAgentVAGEN

./: .gitignore  LICENSE  README.md  RESULTS.md  conftest.py  generated_metadata.json  main.py  requirements.txt
.claude/: CLAUDE.md
audit/: PLAN.md
data/: evaluation_data.json
docs/: Claude-代码模块README的结构要素.md  PIPELINE_SPLIT.md  PROMPT_TRUTH_AND_DIVZERO_GUARD.md  README.md  Structural Measure Residual Validation Ignores Upstream Pattern Dependencies plan.md  gaps.md
examples/: bar.py  bar_generator.py  bar_operator.py  bar_parser.py  bar_question_generator.py  heatmap.py  heatmap_generator.py  line.py  line_generator.py  scatter.py  scatter_generator.py
metadata/: metadata.py  questions_metadata.py
multiChartGenerators/: multi_chart_generator.py
phase_3/: README_PHASE3.md  chart_type_registry.py  (+14 more)
pipeline/phase_2_new/: README.md  pyproject.toml
pipeline/phase_2_new/agpds/: __init__.py  code_validator.py  dag.py  engine_skeleton.py  exceptions.py  metadata.py  models.py  pattern_engine.py  prompt.py  realism_engine.py  sandbox.py  simulator.py  validator.py
pipeline/phase_2_new/agpds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipeline/phase_2_new/scripts/: run_mutation_core.ps1
pipeline/phase_2_new/tests/: test_add_group_dependency.py  test_add_measure.py  test_add_measure_structural.py  test_code_validator.py  test_declare_orthogonal.py  test_exceptions.py  test_injection.py  test_models.py  test_prompt.py  test_sandbox.py  test_simulator.py  test_simulator_sprint2.py  test_simulator_sprint4.py  test_sprint7.py  test_validator.py
(+477 files in other folders)
