[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agpds"
version = "0.2.0"
description = "AGPDS — Agentic Data Simulator SDK (Sprint 1+2)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]
mutation = [
    "pytest>=7.0",
    "mutmut>=3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mutmut]
paths_to_mutate = ["agpds/simulator.py"]
tests_dir = ["tests"]
runner = "python -m pytest -q tests/test_simulator_sprint2.py tests/test_simulator_sprint4.py tests/test_injection.py -k \"add_category or add_temporal or generate\""
